--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "John Bolton <jambolo@users.noreply.github.com> (https://jambolo.github.io)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "yargs": "^15.3.1"
+  }
 }
